# esp32s3-amoled-iwatch

./: README.md
01.firmware/source-code/: sdkconfig  sdkconfig.defaults  sdkconfig.old
01.firmware/source-code/components/bsp_extra/: idf_component.yml
01.firmware/source-code/components/bsp_extra/include/: bsp.h
01.firmware/source-code/main/: CMakeLists.txt  idf_component.yml  main.c
01.firmware/source-code/main/lvgl_port/: game1.c  lock_page.c  main_page.c  page1.c  photo_album.c  setting.c  show_jpg.c  video_audio.c
01.firmware/source-code/main/lvgl_port/include/: game1.h  ui.h
